# cui

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
src/: CMakeLists.txt  camera.c  camera.h  gui.c  gui.h  log.h  main.c  shader.c  shader.h
src/shader/gui/hlsl/: pixel.hlsl  pixel.hlsl.h  vertex.hlsl  vertex.hlsl.h
src/shader/world/hlsl/: pixel.hlsl  pixel.hlsl.h  vertex.hlsl  vertex.hlsl.h
src/shaders/: embed.py  pixel.hlsl  vertex.hlsl
